# rollcall

./: .pymarkdown.cfg  AGENTS.md  PLAN.md  QUICKSTART.md  README.md  README_PYPI.md  pyproject.toml
src/rollcall/: __init__.py  cli.py  core.py
tests/: test_core.py
