[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollcall"
version = "1.0.0"
description = "QR Code Attendance Tracker for Classes"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "rollcall", email = "gkapfham@allegheny.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "pillow>=11.3.0",
    "qrcode>=8.2",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/example/rollcall"
Repository = "https://github.com/example/rollcall"
Issues = "https://github.com/example/rollcall/issues"

[project.scripts]
rollcall = "rollcall.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rollcall"]
