[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollcall"
version = "0.1.0"
description = "QR Code Attendance Tracker for Classes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "rollcall", email = "gkapfham@allegheny.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "pillow>=11.3.0",
    "qrcode>=8.2",
    "typer>=0.12.0",
]

[tool.ruff]
line-length = 79
lint.ignore = [
    "D203", # do not check blank lines
    "D213", # do not check multi-line docstrings
    "E501", # do not check line length
]
lint.select = [
    "E",    # pycodestyle
    "D",    # pydocstyle
    "I",    # isort
    "F",    # pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]

[tool.isort]
include_trailing_comma = true
force_single_line = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[project.urls]
Homepage = "https://github.com/GatorEducator/rollcall"
Repository = "https://github.com/GatorEducator/rollcall"
Issues = "https://github.com/GatorEducator/rollcall/issues"

[project.scripts]
rollcall = "rollcall.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rollcall"]
